# prisma-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: compile.yml
Engine/: CMakeLists.txt
Engine/Shaders/AnimationPipeline/: compute.glsl  vertex_CSM.glsl  vertex_deferred.glsl  vertex_forward.glsl  vertex_omni.glsl
Engine/Shaders/BlitRTPipeline/: vertex.hlsl
Engine/Shaders/Blur/: fragment.glsl
Engine/Shaders/CSMDebug/: fragment.glsl
Engine/Shaders/CSMPipeline/: geometry.glsl  vertex.glsl
Engine/Shaders/CloudPipeline/: fragment.glsl  vertex.glsl
Engine/include/: engine.h
Engine/src/: engine.cpp
GUI/: CMakeLists.txt
GUI/Shaders/Bloom/: fragment.glsl
GUI/Shaders/BloomHdr/: fragment.glsl
GUI/Shaders/Brightness/: fragment.glsl
GUI/Shaders/FXAA/: fragment.glsl
GUI/Shaders/PixelCapture/: fragment.glsl  fragment_animation.glsl  vertex.glsl  vertex_animation.glsl
GUI/Shaders/SSAO/: fragment.glsl
GUI/Shaders/SceneRender/: fragment.hlsl  fragment_capture.hlsl  vertex.hlsl
GUI/Shaders/Styles/: fragment.glsl
GUI/Shaders/Vignette/: fragment.glsl
GUI/Shaders/Volumetric/: fragment.glsl
GUI/Shaders/VolumetricBlit/: fragment.glsl
GUI/Shaders/VolumetricBlur/: fragment.glsl
GUI/Shaders/VolumetricLight/: fragment.glsl  vertex.glsl
GUI/Shaders/VolumetricRays/: fragment.glsl
GUI/imguizmo/: imguizmo.cpp  imguizmo.h
GUI/include/: AddingMenu.h  FolderView.h  ImGuiCamera.h  ImGuiDebug.h  ImGuiHelper.h  ImGuiKey.h  ImGuiLog.h  ImGuiSelector.h  ImGuiStyle.h  ImGuiTabs.h  LightInfo.h  MeshCreator.h  MeshInfo.h  NodeCreator.h  NodeViewer.h  PixelCapture.h  PlotFPS.h  QueryGPU.h  RegisterComponent.h  RegisterCreator.h  ScenePipeline.h  SettingsTab.h  TextureInfo.h
GUI/include/Postprocess/: Bloom.h  Effects.h  FXAA.h  SSAO.h  Styles.h  VolumetricLight.h  VolumetricRays.h
GUI/src/: AddingMenu.cpp  FolderView.cpp  ImGuiCamera.cpp  ImGuiHelper.cpp  ImGuiLog.cpp  ImGuiSelector.cpp  ImGuiTabs.cpp  ImguiDebug.cpp  LightInfo.cpp  MeshCreator.cpp  MeshInfo.cpp  NodeCreator.cpp  NodeViewer.cpp  PixelCapture.cpp  PlotFPS.cpp  QueryGPU.cpp  RegisterCreator.cpp  ScenePipeline.cpp  SettingsTab.cpp  TextureInfo.cpp
GUI/src/Postprocess/: Bloom.cpp  Effects.cpp  FXAA.cpp  SSAO.cpp  Styles.cpp  VolumetricLight.cpp  VolumetricRays.cpp
Resources/BasicScene/: BasicScene.gltf
Resources/Cube/: cube.glb  cube.gltf
Resources/DefaultScene/: cube.prisma  default.gltf  default.prisma
Resources/Helmet/: DamagedHelmet.glb  DamagedHelmet.gltf  animation.gltf  animation1.gltf  imgui.ini
Resources/Landscape/: animation.gltf  animation1.gltf  cube.gltf  imgui.ini  landscape.gltf  landscape1.gltf
Resources/Sponza/: Sponza.gltf  animation.gltf  animation1.gltf
Resources/configuration/: resource.rc  settings.json
Resources/res/: ltc1.txt  ltc2.txt
UserEngine/include/: ParticleController.h  PlayerController.h  UserEngine.h
UserEngine/src/: ParticleController.cpp  PlayerController.cpp  UserEngine.cpp
configuration/: settings.json
(+341 files in other folders)
